fixed double horizontal scrollbar on toa modal page

--- a/src/WebChannel/main/webapp/xpedx/css/theme/theme-xpedx_v1.2.css
+++ b/src/WebChannel/main/webapp/xpedx/css/theme/theme-xpedx_v1.2.css
@@ -6327,7 +6327,7 @@ div#termsOfAccess {
 
 div#termsOfAccess #ajax-termsOfAccessContent {
 	height: 100% !important;
-	width: 100% !important;
+	width: 95% !important;
 }
 /* jquery slideshow zindex fix */
 div#termsOfAccess #ext-gen6 {
